What's new...

June 17/2020 : JF 23.1 released
  - jfBackup/0.15
    - added more error reporting and show online clients in status screen
  - added support for Arm64 (Raspberry Pi)
    - Raspberry Pi has released a Beta Arm64 release
    - not fully working yet, unable to compile native library, they need to fix some packages

May 27/2020 : JF 23.0 released
  - SMTP now supports NTLM auth
  - jfBackup/0.14
    - added SMTP NTLM

May 25/2020 : JF 22.5 released
  - FreeBSD
    - added OpenGL support (GLFW)

May 23/2020 : JF 22.4 released
  - FreeBSD is now supported (excluding native bindings for OpenGL and Camera)
    - OpenGL relies on GLFW which doesn't compile
    - Camera relies on V4L2 which isn't available yet

May 11/2020 : JF 22.3 released
  - jfMusic/0.9
    - now includes sample DLS file (instrument bank)

May 10/2020 : JF 22.2 released
  - fix linux and mac builds

Apr 27/2020 : JF 22.1 released
  - jfBackup/0.13
    - fix : was unable to load native dll

Apr 20/2020 : JF 22.0 released
  - jfBackup/0.12
    - minor fixes and improvements

Apr 19/2020 : JF 21.2 released
  - improved build scripts
  - added graal support although not much works with it yet
    to build a project with graal use the 'graal' ant task:
      ant graal

Mar 20/2020 : JF 21.1 released
  - jfDVR/0.8
    - fix : buffer overflow issues

Mar 18/2020 : JF 21.0 released
  - major fix : win64 loader now loads msvcrt dlls included with jre properly
    - tested msi packages in Windows Sandbox, they no longer require msvcrt to be pre-installed.
    - all msi packages will be re-released

Mar 17/2020 : JF 20.1.0 released
  - jfDVR/0.6
    - fix : use 24 hour format in filenames

Mar 10/2020 : JF 20.0.0 released
  - fix : mac support has been fixed
    - note : the icns look corrupted but using Finder or Preview they look good
      - could be a MacOS bug
  - jfPaint/0.24
    - new : create MacOS .dmg

Mar 9/2020 : JF 19.6.0 released
  - jfDVR/0.5
    - fix : loading ffmpeg libraries