@@ -7,7 +7,7 @@
   <property name="src" location="src"/>
   <property name="build" location="classes"/>
   <property name="classpath" location="javaforce.jar"/>
-  <property name="jre" location="${home}/jre_base_javac"/>
+  <property name="jre" location="${home}/jre_base"/>
   <property name="version" value="0.5"/>
 
   <import file="../../base.xml"/>
